--- a/src/pages/admin/component/Nav.css
+++ b/src/pages/admin/component/Nav.css
@@ -48,8 +48,44 @@
     width: 150px;
     height: 150px;
     border-radius: 50%;
+    margin-bottom: 50px;
 }
-.sidebar .sidebar-user h3 {
+
+.sidebar.open .sidebar-user-info {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
+.sidebar.open .sidebar-user-info > div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.sidebar.open .sidebar-user-info .icon {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: start;
+
+    margin-right: 20px;
+}
+.sidebar.open .sidebar-user-info .icon div:nth-child(1) {
+    margin-top: 7px;
+}
+
+.sidebar.open .sidebar-user-info .icon div:nth-child(2) {
+    margin-top: -7px;
+}
+
+.sidebar.open .sidebar-user-info .icon svg {
+    font-size: 1.5rem;
+}
+
+.sidebar .sidebar-user div {
     font-size: 2rem;
     font-weight: 700;
     text-align: center;
@@ -59,4 +95,8 @@
     font-size: 1.3rem;
     font-weight: 400;
     text-align: center;
+}
+
+.sidebar.close .sidebar-user .info {
+    display: none;
 }
