--- a/src/pages/admin/AdminMain.css
+++ b/src/pages/admin/AdminMain.css
@@ -57,7 +57,7 @@
     width: 100%;
     height: 100px;
 
-    background-image: url('../../assets/img/logo-small.png');
+    /* background-image: url('../../assets/img/logo-small.png'); */
     background-size: 80%;
     background-position: center;
     background-repeat: no-repeat;
