--- a/src/pages/admin/component/Nav.css
+++ b/src/pages/admin/component/Nav.css
@@ -6,6 +6,7 @@
     --admin-nav-color: #fff;
     --admin-nav-hover-color: ##1a202e;
     --admin-nav-hover-color-2: #191919;
+    --sidebar-hover: #BE3144;
 }
 
 .sidebar {
@@ -30,7 +31,40 @@
 }
 
 
-/** */
+/** Logo */
+.sidebar .logo {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    width: 100%;
+    height: 100px;
+}
+
+.sidebar.open .logo .img {
+    background-image: url('../../../assets/img/mypick-logo.png');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+
+    width: 60%;
+    height: 100%;
+}
+
+.sidebar.close .logo .img {
+
+    background-image: url('../../../assets/img/mypick-logo-small.png');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+
+    width: 50px;
+    height: 50px;
+    padding: 25px;
+
+    border-radius: 50%;
+    background-color: var(--admin-nav-hover-color);
+}
 
 
 .sidebar .menu {
@@ -38,7 +72,7 @@
     flex-direction: column;
     justify-content: start;
 
-    margin-bottom: 15rem;
+    margin-bottom: 7rem;
 }
 
 .sidebar.open .menu {
@@ -82,7 +116,6 @@
     opacity: 1;
     font-size: 1.8rem;
 
-    transition: 1s ease-in-out;
     /* transition-delay: 0.5s; */
     z-index: 4;
 }
@@ -102,61 +135,6 @@
 
     z-index: 4;
 }
-
-.sidebar.close .menu .item:hover::before {
-    content: '';
-    position: absolute;
-    left: -15px;
-    top: 0;
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
-    background-color: var(--admin-nav-hover-color);
-    z-index: 1;
-}
-.sidebar.close .menu .item:hover::after {
-    content: '';
-    position: absolute;
-    right: -15px;
-    top: 0;
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
-    background-color: var(--admin-nav-hover-color);
-    z-index: 1;
-}
-
-.sidebar.open .menu .item:hover::before {
-    content : '';
-    position: absolute;
-    left: -20px;
-
-    width: 44px;
-    height: 44px;
-    border-radius: 50%;
-    background-color: var(--admin-nav-hover-color);
-
-    z-index: 1;
-}
-.sidebar.open .menu .item:hover::after {
-    position: absolute;
-    right: -90px;
-    content: '';
-    height: 44px;
-    width: 100px;
-    background-color: var(--admin-nav-hover-color);
-}
-
-.sidebar .menu .item:hover {
-    background-color: var(--admin-background-color);
-    
-    color: var(--admin-nav-color);
-}
-
-.sidebar .menu .item:hover span {
-    color: var(--admin-nav-color);
-}
-
 
 /** nav-close*/
 .sidebar .nav-close {
@@ -180,9 +158,14 @@
     color: var(--admin-nav-color);
 
     padding: 20px;
-    margin-right: 15px;
 
     font-size: 2.5rem;
+}
+.sidebar.open .nav-close .item svg {
+    margin-right: 15px;
+}
+.sidebar.close .nav-close .item svg {
+    margin-right: 0px;
 }
 
 .sidebar.close .nav-close .item span {
@@ -192,6 +175,7 @@
     display: block;
     color: var(--admin-background-color);
 }
+
 
 
 
@@ -298,11 +282,12 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
+
+    cursor: pointer;
 }
 
 .sidebar .sidebar-option svg {
     font-size: 1.5rem;
-    cursor: pointer;
 }
 
 .sidebar.close .sidebar-option span {
@@ -313,9 +298,20 @@
 .sidebar.open .sidebar-option span {
     margin-left: 15px;
     opacity: 1;
-    transition: 1s ease-in-out;
-    transition-delay: 0.5s;
     font-size: 1.5rem;
-    cursor: pointer;
 }
 
+
+
+.sidebar.close .menu .item:hover svg,
+.sidebar.open .menu .item:hover span,
+.sidebar.open .menu .item:hover svg,
+.sidebar.open .nav-close .item:hover span,
+.sidebar .sidebar-option > div:hover svg,
+.sidebar.open .sidebar-option div:hover span {
+    color: var(--sidebar-hover);
+}
+
+.sidebar .nav-close .item:hover svg {
+    background-color: var(--sidebar-hover);
+}
