Feat: User List

--- a/src/pages/admin/component/AdminUserList.css
+++ b/src/pages/admin/component/AdminUserList.css
@@ -66,3 +66,9 @@
 .admin-user-list-container table tbody tr td:nth-child(4) .stop-status {
     background-color: #f30d0d;
 }
+
+
+
+
+
+/** User Deatail **/
