--- a/src/pages/admin/component/AdminUserList.css
+++ b/src/pages/admin/component/AdminUserList.css
@@ -72,3 +72,13 @@
 
 
 /** User Deatail **/
+.user-detail-container {
+    position: absolute;
+    top: 100px;
+    left: 300px;
+    width: 80%;
+    height: 80%;
+    z-index: 10;
+
+    background-color: #fff;
+}
