--- a/src/pages/admin/AdminMain.css
+++ b/src/pages/admin/AdminMain.css
@@ -18,6 +18,7 @@
     --main-color-2: #FF4E77;
     --main-color-3: #FF834F;
     --main-color-4: #4D4D4D;
+    --sub-color-1: #74ff74;
 
 
     --card-background-color: linear-gradient(0deg, #1b1b1b, #222, #1b1b1b);
