--- a/src/pages/admin/component/AdminUserList.css
+++ b/src/pages/admin/component/AdminUserList.css
@@ -94,9 +94,9 @@
     background-color: #fff;
 }
 
-.user-detail-container .info {
+.user-detail-container > .info {
     width: 100%;
-    height: 150px;
+    height: 90px;
 
 }
 
@@ -132,7 +132,7 @@
 }
 
 .user-detail-container .info .nickName .step.user {
-    background-color: rgb(116, 255, 116);
+    background-color: #74ff74;
 }
 
 .user-detail-container .info .nickName .step > div {
@@ -154,8 +154,53 @@
 }
 
 
+
+/** 상세보기 선택 */
+.user-detail-container .status-container {
+    display: flex;
+    justify-content: start;
+}
+
+.user-detail-container .status-container > div {
+    margin: 10px 30px 10px 30px;
+    padding:5px 10px 5px 15px;
+    height: 50px;
+    background-color: #fff;
+
+    font-size: 1.7rem;
+    border-radius: 20px;
+
+    cursor: pointer;
+}
+
+.user-detail-container .status-container > div > svg {
+    margin-right: 10px;
+}
+
+.user-detail-container .status-container > div > div {
+    width: 100px;
+    height: 100%;
+    background-color: #fff;
+}
+
+.user-detail-container .status-container > .info.active,
+.user-detail-container .status-container > .info:hover {
+    color: #fff;
+    background-color: var(--main-color-1);
+}
+
+.user-detail-container .status-container > .chat.active,
+.user-detail-container .status-container > .chat:hover {
+    color: #000;
+    background-color: var(--sub-color-1);
+}
+
+
+
+
+
 /** 사용자 정보 */
-.card-status {
+.user-detail-container .card-status {
     width: 80%;
     margin: 20px;
     padding: 10px 35px;
@@ -167,17 +212,17 @@
     box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
 }
 
-.info .card-status > small {
+.user-detail-container .card-status > small {
     margin-right: 10px;
     font-size: 1.2rem;
     color: var(--main-color-2);
 }
 
-.info .card-status > small > svg {
+.user-detail-container .card-status > small > svg {
     margin-right: 10px;
 }
 
-.info .card-status > h2 {
+.user-detail-container .card-status > h2 {
     font-size: 1.8rem;
     color: #fff;
     margin-right: 10%;
