Feat: 활동 상태 나타내기

--- a/src/pages/admin/AdminMain.css
+++ b/src/pages/admin/AdminMain.css
@@ -19,6 +19,7 @@
     --main-color-3: #FF834F;
     --main-color-4: #4D4D4D;
     --sub-color-1: #74ff74;
+    --sub-color-2: #0f0;
 
 
     --card-background-color: linear-gradient(0deg, #1b1b1b, #222, #1b1b1b);
