--- a/src/pages/admin/component/AdminUserList.css
+++ b/src/pages/admin/component/AdminUserList.css
@@ -233,11 +233,12 @@
 
 
 /** 정지 상태  */
-.user-detail-container > .stop {
+.user-detail-container > .option {
     margin-top: 30px;
     margin-left: 20px;
     padding:5px 10px 5px 15px;
-    height: 50px;
+    width: 400px;
+    height: 80px;
 
     box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
 
@@ -247,7 +248,7 @@
     align-items: center;
 }
 
-.user-detail-container > .stop .title {
+.user-detail-container > .option .title {
     margin-right: 20px;
     padding: 10px;
     display: flex;
@@ -256,17 +257,17 @@
     color: #fff;
 }
 
-.user-detail-container > .stop > .stop-action {
+.user-detail-container > .option > .option-action {
     display: flex;
     align-items: center;
 }
 
-.user-detail-container > .stop > div > svg {
+.user-detail-container > .option > div > svg {
     margin-right: 10px;
 }
 
 /** 정지 상태 체크 */
-.user-detail-container > .stop > div > label {
+.user-detail-container > .option > div > label {
     position: relative;
     width: 120px;
     height: 60px;
@@ -282,12 +283,12 @@
     cursor: pointer;
 }
 
-.user-detail-container > .stop > div >label input {
+.user-detail-container > .option > div >label input {
     position: absolute;
     appearance: none;
 }
 
-.user-detail-container > .stop > div > label .angle {
+.user-detail-container > .option > div > label .angle {
     position: absolute;
     border-left: 35px solid transparent;
     border-right: 35px solid transparent;
@@ -297,49 +298,49 @@
     transition: 0.5s;
 }
 
-.user-detail-container > .stop > div > label input:checked ~ .angle {
+.user-detail-container > .option > div > label input:checked ~ .angle {
     border-bottom: 60px solid #f00;
     transform: skewX(30deg) scale(0.6) translateX(100px) rotate(180deg);
     filter: drop-shadow(0 0 16px #f00) drop-shadow(0 0 30px #f00);
 }
 
-.user-detail-container > .stop > div > label text {
+.user-detail-container > .option > div > label text {
     padding: 10px;
     color: #fff;
     transition: 0.5s;
     text-transform: uppercase;
 }
-.user-detail-container > .stop > div > label text:nth-child(2) {
+.user-detail-container > .option > div > label text:nth-child(2) {
     transform: skewX(30deg) scale(1);
     color: #f00;
     filter: drop-shadow(0 0 16px #f00) drop-shadow(0 0 30px #f00);
 }
 
-.user-detail-container > .stop > div > label input:checked ~ .angle:nth-child(2) {
+.user-detail-container > .option > div > label input:checked ~ .angle:nth-child(2) {
     transform: skewX(30deg) scale(1);
 }
 
-.user-detail-container > .stop > div > label text:nth-child(3) {
+.user-detail-container > .option > div > label text:nth-child(3) {
     color: #0f0;
     transform: skewX(30deg) scale(1);
     filter: drop-shadow(0 0 16px #0f0) drop-shadow(0 0 30px #0f0);
 }
 
-.user-detail-container > .stop > div > label input:checked ~ .angle:nth-child(3) {
+.user-detail-container > .option > div > label input:checked ~ .angle:nth-child(3) {
     transform: skewX(30deg) scale(0);
 }
 
-.user-detail-container > .stop > .stop-action > span {
+.user-detail-container > .option > .option-action > span {
     margin-left: 50px;
     font-size: 1.2rem;
     color: var(--sub-color-2);
 }
 
-.user-detail-container > .stop > .stop-action > .span-stop {
+.user-detail-container > .option > .option-action > .span-stop {
     color: #f00;
 }
 
-.user-detail-container > .stop > .stop-action > .span-active {
+.user-detail-container > .option > .option-action > .span-stop {
     color: #0f0;
 }
 
