--- a/src/pages/admin/component/AdminUserList.css
+++ b/src/pages/admin/component/AdminUserList.css
@@ -262,16 +262,16 @@
     align-items: center;
 }
 
-.user-detail-container > .option > div > svg {
-    margin-right: 10px;
+.user-detail-container > .option .title > svg {
+    margin-right: 20px;
 }
 
 /** 정지 상태 체크 */
-.user-detail-container > .option > div > label {
+.user-detail-container > .option.stop > div > label {
     position: relative;
     width: 120px;
     height: 60px;
-    background: #222;
+    /* background: #222; */
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -283,12 +283,12 @@
     cursor: pointer;
 }
 
-.user-detail-container > .option > div >label input {
+.user-detail-container > .option.stop > div >label input {
     position: absolute;
     appearance: none;
 }
 
-.user-detail-container > .option > div > label .angle {
+.user-detail-container > .option.stop > div > label .angle {
     position: absolute;
     border-left: 35px solid transparent;
     border-right: 35px solid transparent;
@@ -298,51 +298,137 @@
     transition: 0.5s;
 }
 
-.user-detail-container > .option > div > label input:checked ~ .angle {
+.user-detail-container > .option.stop > div > label input:checked ~ .angle {
     border-bottom: 60px solid #f00;
     transform: skewX(30deg) scale(0.6) translateX(100px) rotate(180deg);
     filter: drop-shadow(0 0 16px #f00) drop-shadow(0 0 30px #f00);
 }
 
-.user-detail-container > .option > div > label text {
+.user-detail-container > .option.stop > div > label text {
     padding: 10px;
     color: #fff;
     transition: 0.5s;
     text-transform: uppercase;
 }
-.user-detail-container > .option > div > label text:nth-child(2) {
+.user-detail-container > .option.stop > div > label text:nth-child(2) {
     transform: skewX(30deg) scale(1);
     color: #f00;
     filter: drop-shadow(0 0 16px #f00) drop-shadow(0 0 30px #f00);
 }
 
-.user-detail-container > .option > div > label input:checked ~ .angle:nth-child(2) {
+.user-detail-container > .option.stop > div > label input:checked ~ .angle:nth-child(2) {
     transform: skewX(30deg) scale(1);
 }
 
-.user-detail-container > .option > div > label text:nth-child(3) {
+.user-detail-container > .option.stop > div > label text:nth-child(3) {
     color: #0f0;
     transform: skewX(30deg) scale(1);
     filter: drop-shadow(0 0 16px #0f0) drop-shadow(0 0 30px #0f0);
 }
 
-.user-detail-container > .option > div > label input:checked ~ .angle:nth-child(3) {
+.user-detail-container > .option.stop > div > label input:checked ~ .angle:nth-child(3) {
     transform: skewX(30deg) scale(0);
 }
 
-.user-detail-container > .option > .option-action > span {
+.user-detail-container > .option.stop > .option-action > span {
     margin-left: 50px;
     font-size: 1.2rem;
     color: var(--sub-color-2);
 }
 
-.user-detail-container > .option > .option-action > .span-stop {
+.user-detail-container > .option.stop > .option-action > .status-active {
     color: #f00;
 }
 
-.user-detail-container > .option > .option-action > .span-stop {
+.user-detail-container > .option.stop > .option-action > .status-stop {
     color: #0f0;
 }
+
+
+/** 관리자 상태 체크 */
+.user-detail-container > .option.admin > div > label {
+    position: relative;
+    width: 120px;
+    height: 60px;
+    /* background: #222; */
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    box-shadow: inset 0 2px 15px rgba(0, 0, 0, 0.2),
+    inset 0 2px 2px rgba(0, 0, 0, 0.2),
+    inset 0 -1px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 10px;
+    transform: skewX(330deg);
+    cursor: pointer;
+}
+
+.user-detail-container > .option.admin > div >label input {
+    position: absolute;
+    appearance: none;
+}
+
+.user-detail-container > .option.admin > div > label .angle {
+    position: absolute;
+    border-left: 35px solid transparent;
+    border-right: 35px solid transparent;
+    border-bottom: 60px solid #f00;
+    transform: skewX(30deg) scale(0.6) translateX(-16px);
+    filter: drop-shadow(0 0 16px #f00) drop-shadow(0 0 30px #f00);
+    transition: 0.5s;
+}
+
+.user-detail-container > .option.admin > div > label input:checked ~ .angle {
+    border-bottom: 60px solid #0f0;
+    transform: skewX(30deg) scale(0.6) translateX(100px) rotate(180deg);
+    filter: drop-shadow(0 0 16px #0f0) drop-shadow(0 0 30px #0f0);
+}
+
+.user-detail-container > .option.admin > div > label text {
+    padding: 10px;
+    color: #fff;
+    transition: 0.5s;
+    text-transform: uppercase;
+}
+.user-detail-container > .option.admin > div > label text:nth-child(2) {
+    transform: skewX(30deg) scale(1);
+    color: #0f0;
+    filter: drop-shadow(0 0 16px #f00) drop-shadow(0 0 30px #0f0);
+}
+
+.user-detail-container > .option.admin > div > label input:checked ~ .angle:nth-child(2) {
+    transform: skewX(30deg) scale(1);
+}
+
+.user-detail-container > .option.admin > div > label text:nth-child(3) {
+    color: #f00;
+    transform: skewX(30deg) scale(1);
+    filter: drop-shadow(0 0 16px #0f0) drop-shadow(0 0 30px #f00);
+}
+
+.user-detail-container > .option.admin > div > label input:checked ~ .angle:nth-child(3) {
+    transform: skewX(30deg) scale(0);
+}
+
+.user-detail-container > .option.admin > .option-action > span {
+    margin-left: 50px;
+    font-size: 1.2rem;
+    color: var(--sub-color-2);
+}
+
+.user-detail-container > .option.admin > .option-action > .status-admin {
+    color: #f00;
+}
+
+.user-detail-container > .option.admin > .option-action > .status-user {
+    color: #0f0;
+}
+
+.user-detail-container > .option.admin > .option-action > .result {
+    margin-left: 50px;
+    font-size: 1.6rem;
+}
+
+
 
 
 
