Feat: 사용자 상세 정보

--- a/src/pages/admin/AdminMain.css
+++ b/src/pages/admin/AdminMain.css
@@ -20,6 +20,7 @@
     --main-color-4: #4D4D4D;
     --sub-color-1: #74ff74;
     --sub-color-2: #0f0;
+    --sub-color-3: rgb(89, 114, 255);
 
 
     --card-background-color: linear-gradient(0deg, #1b1b1b, #222, #1b1b1b);
