--- a/src/pages/admin/component/AdminUserList.css
+++ b/src/pages/admin/component/AdminUserList.css
@@ -5,6 +5,65 @@
     height: 100%;
 }
 
+
+/*** 검색 영역 ***/
+.admin-user-list-container .search {
+    margin-top: 40px;
+    margin-left: 10%;
+    margin-bottom: 70px;
+    width: 100%;
+    height: 50px;
+}
+
+
+/**slect의 화살표를 좌측으로 조금 밀기 */
+
+.admin-user-list-container .search-select {
+    margin-left: 20px;
+    padding: 15px 35px 15px 15px;
+
+    font-size: 1.2rem;
+
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    background: #0a142b url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='white'%3e%3cpath d='M7 10l5 5 5-5z'/%3e%3c/svg%3e") no-repeat right 10px center;
+    background-size: 20px;
+
+    border-radius: 20px;
+    color: #fff;
+    background-color: #0a142b;
+}
+
+
+/** 검색 입력창 */
+.admin-user-list-container .search-input {
+    margin-left: 20px;
+    padding: 15px 35px 15px 15px;
+    width: 50%;
+    height: 50px;
+
+    border-radius: 20px;
+    background-color: #0a142b;
+    color: #fff;
+    font-size: 1.2rem;
+}
+
+
+/** 검색 버튼 */
+.admin-user-list-container .search-button {
+    margin-left: 20px;
+    width: 140px;
+    height: 50px;
+
+    border-radius: 20px;
+    background-color: #0a142b;
+    color: #fff;
+    font-size: 1.2rem;
+}
+
+
+
 .admin-user-list-container table {
     width: 100%;
     border-collapse: collapse;
