--- a/src/pages/admin/component/AdminUserList.css
+++ b/src/pages/admin/component/AdminUserList.css
@@ -261,7 +261,7 @@
     justify-content: start;
 }
 
-.user-detail-container .status-container > div {
+.user-detail-container > .status-container > div {
     margin: 10px 30px 10px 30px;
     padding:5px 10px 5px 15px;
     height: 50px;
@@ -273,7 +273,7 @@
     cursor: pointer;
 }
 
-.user-detail-container .status-container > div > svg {
+.user-detail-container > .status-container > div > svg {
     margin-right: 10px;
 }
 
@@ -333,7 +333,7 @@
 
 
 /** 정지 상태  */
-.user-detail-container > .option {
+.user-detail-container .option {
     margin-top: 30px;
     margin-left: 20px;
     padding:5px 10px 5px 15px;
@@ -348,7 +348,7 @@
     align-items: center;
 }
 
-.user-detail-container > .option .title {
+.user-detail-container .option .title {
     margin-right: 20px;
     padding: 10px;
     display: flex;
@@ -357,17 +357,17 @@
     color: #fff;
 }
 
-.user-detail-container > .option > .option-action {
+.user-detail-container .option > .option-action {
     display: flex;
     align-items: center;
 }
 
-.user-detail-container > .option .title > svg {
+.user-detail-container .option .title > svg {
     margin-right: 20px;
 }
 
 /** 정지 상태 체크 */
-.user-detail-container > .option.stop > div > label {
+.user-detail-container .option.stop > div > label {
     position: relative;
     width: 120px;
     height: 60px;
@@ -383,12 +383,12 @@
     cursor: pointer;
 }
 
-.user-detail-container > .option.stop > div >label input {
+.user-detail-container .option.stop > div >label input {
     position: absolute;
     appearance: none;
 }
 
-.user-detail-container > .option.stop > div > label .angle {
+.user-detail-container .option.stop > div > label .angle {
     position: absolute;
     border-left: 35px solid transparent;
     border-right: 35px solid transparent;
@@ -398,55 +398,55 @@
     transition: 0.5s;
 }
 
-.user-detail-container > .option.stop > div > label input:checked ~ .angle {
+.user-detail-container .option.stop > div > label input:checked ~ .angle {
     border-bottom: 60px solid #f00;
     transform: skewX(30deg) scale(0.6) translateX(100px) rotate(180deg);
     filter: drop-shadow(0 0 16px #f00) drop-shadow(0 0 30px #f00);
 }
 
-.user-detail-container > .option.stop > div > label text {
+.user-detail-container .option.stop > div > label text {
     padding: 10px;
     color: #fff;
     transition: 0.5s;
     text-transform: uppercase;
 }
-.user-detail-container > .option.stop > div > label text:nth-child(2) {
+.user-detail-container .option.stop > div > label text:nth-child(2) {
     transform: skewX(30deg) scale(1);
     color: #f00;
     filter: drop-shadow(0 0 16px #f00) drop-shadow(0 0 30px #f00);
 }
 
-.user-detail-container > .option.stop > div > label input:checked ~ .angle:nth-child(2) {
+.user-detail-container .option.stop > div > label input:checked ~ .angle:nth-child(2) {
     transform: skewX(30deg) scale(1);
 }
 
-.user-detail-container > .option.stop > div > label text:nth-child(3) {
+.user-detail-container .option.stop > div > label text:nth-child(3) {
     color: #0f0;
     transform: skewX(30deg) scale(1);
     filter: drop-shadow(0 0 16px #0f0) drop-shadow(0 0 30px #0f0);
 }
 
-.user-detail-container > .option.stop > div > label input:checked ~ .angle:nth-child(3) {
+.user-detail-container .option.stop > div > label input:checked ~ .angle:nth-child(3) {
     transform: skewX(30deg) scale(0);
 }
 
-.user-detail-container > .option.stop > .option-action > span {
+.user-detail-container .option.stop > .option-action > span {
     margin-left: 50px;
     font-size: 1.2rem;
     color: var(--sub-color-2);
 }
 
-.user-detail-container > .option.stop > .option-action > .status-active {
+.user-detail-container .option.stop > .option-action > .status-active {
     color: #f00;
 }
 
-.user-detail-container > .option.stop > .option-action > .status-stop {
+.user-detail-container .option.stop > .option-action > .status-stop {
     color: #0f0;
 }
 
 
 /** 관리자 상태 체크 */
-.user-detail-container > .option.admin > div > label {
+.user-detail-container .option.admin > div > label {
     position: relative;
     width: 120px;
     height: 60px;
@@ -462,12 +462,12 @@
     cursor: pointer;
 }
 
-.user-detail-container > .option.admin > div >label input {
+.user-detail-container .option.admin > div > label input {
     position: absolute;
     appearance: none;
 }
 
-.user-detail-container > .option.admin > div > label .angle {
+.user-detail-container .option.admin > div > label .angle {
     position: absolute;
     border-left: 35px solid transparent;
     border-right: 35px solid transparent;
@@ -477,53 +477,54 @@
     transition: 0.5s;
 }
 
-.user-detail-container > .option.admin > div > label input:checked ~ .angle {
+.user-detail-container .option.admin > div > label input:checked ~ .angle {
     border-bottom: 60px solid #0f0;
     transform: skewX(30deg) scale(0.6) translateX(100px) rotate(180deg);
     filter: drop-shadow(0 0 16px #0f0) drop-shadow(0 0 30px #0f0);
 }
 
-.user-detail-container > .option.admin > div > label text {
+.user-detail-container .option.admin > div > label text {
     padding: 10px;
     color: #fff;
     transition: 0.5s;
     text-transform: uppercase;
 }
-.user-detail-container > .option.admin > div > label text:nth-child(2) {
+
+.user-detail-container .option.admin > div > label text:nth-child(2) {
     transform: skewX(30deg) scale(1);
     color: #0f0;
     filter: drop-shadow(0 0 16px #f00) drop-shadow(0 0 30px #0f0);
 }
 
-.user-detail-container > .option.admin > div > label input:checked ~ .angle:nth-child(2) {
+.user-detail-container .option.admin > div > label input:checked ~ .angle:nth-child(2) {
     transform: skewX(30deg) scale(1);
 }
 
-.user-detail-container > .option.admin > div > label text:nth-child(3) {
+.user-detail-container .option.admin > div > label text:nth-child(3) {
     color: #f00;
     transform: skewX(30deg) scale(1);
     filter: drop-shadow(0 0 16px #0f0) drop-shadow(0 0 30px #f00);
 }
 
-.user-detail-container > .option.admin > div > label input:checked ~ .angle:nth-child(3) {
+.user-detail-container .option.admin > div > label input:checked ~ .angle:nth-child(3) {
     transform: skewX(30deg) scale(0);
 }
 
-.user-detail-container > .option.admin > .option-action > span {
+.user-detail-container .option.admin > .option-action > span {
     margin-left: 50px;
     font-size: 1.2rem;
     color: var(--sub-color-2);
 }
 
-.user-detail-container > .option.admin > .option-action > .status-admin {
+.user-detail-container .option.admin > .option-action > .status-admin {
     color: #f00;
 }
 
-.user-detail-container > .option.admin > .option-action > .status-user {
+.user-detail-container .option.admin > .option-action > .status-user {
     color: #0f0;
 }
 
-.user-detail-container > .option.admin > .option-action > .result {
+.user-detail-container .option.admin > .option-action > .result {
     margin-left: 50px;
     font-size: 1.6rem;
 }
