--- a/src/pages/admin/component/AdminUserList.css
+++ b/src/pages/admin/component/AdminUserList.css
@@ -329,6 +329,19 @@
 }
 
 
+/** 상태 관리 **/
+.user-detail-container .status-info-on {
+    display: block;
+
+}
+
+.user-detail-container .status-info-off {
+    display: none;
+}
+
+.user-detail-container .status-chat-off {
+    display: none;
+}
 
 
 
@@ -573,4 +586,73 @@
 
 
 
+/** 채팅 영역 */
+.user-detail-container .chat-container {
+    position: relative;
+    margin: 30px;
+    align-items: center;
+    width: 100%;
+    height: 500px;
 
+    border-radius: 10px;
+    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
+    overflow: hidden;
+}
+
+.chat-container .chat-item {
+    padding-top: 10px;
+    padding-left: 20px;
+    width: 100%;
+    height: 12%;
+
+    display: flex;
+}
+
+.chat-container .chat-item:nth-child(2n-1) {
+    background-color: rgba(108, 55, 255, 0.8);
+}
+
+.chat-container .chat-item:nth-child(2n) {
+    background-color: rgba(10, 20, 43, 0.2);
+}
+
+
+.chat-container .chat-item .day-0 {
+    color: var(--main-color-1);
+}
+
+.chat-container .chat-item .day-1 {
+    color: var(--main-color-2);
+}
+
+.chat-item .day-2,
+.chat-item .day-3,
+.chat-item .day-4,
+.chat-item .day-5,
+.chat-item .day-6,
+.chat-item .day-7 {
+    color: var(--sub-color-1);
+}
+
+.chat-item .old {
+    color: #ccc;
+}
+
+.chat-container .chat-item > div:nth-child(1) {
+    width: 250px;
+    color: #fff;
+}
+
+.chat-container .chat-item > div:nth-child(1) > span > svg{
+    margin-right: 10px;
+}
+
+.chat-container .chat-item > div:nth-child(2) {
+    margin-left: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    font-size: 1.6rem;
+    color: #fff;
+}
