--- a/src/pages/admin/component/AdminUserList.css
+++ b/src/pages/admin/component/AdminUserList.css
@@ -358,7 +358,7 @@
     margin-left: 20px;
     padding:5px 10px 5px 15px;
     width: 600px;
-    height: 130px;
+    height: 50px;
 
     box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
 
@@ -754,6 +754,7 @@
     flex-wrap: wrap;
     gap: 10px;
     margin-top: 10px;
+    margin-left: 20px;
 }
 
 .suspension-buttons button {
